test/corpus/account_name.txt
================================================================================
Account name
================================================================================
2026-01-24
    Assets  1000
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Account name with colons
================================================================================
2026-01-24
    Assets:Checking:Personal  1000
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Account name with spaces
================================================================================
2026-01-24
    Assets Checking Personal  1000
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Account name with unicode
================================================================================
2026-01-24
    Мой крутой аккаунт  1000
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Multilevel complex account
================================================================================
2026-01-24
    Мой крутой аккаунт:И его подвид  1000
    Assets

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))
