test/corpus/amount.txt
================================================================================
An amount
================================================================================
2026-01-24
    Expenses  1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))))

================================================================================
Simple commodity
================================================================================
2026-01-24
    Expenses  1 RSD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)
        (commodity)))))

================================================================================
Left commodity symbol, no space
================================================================================
2026-01-24
    Assets  $1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Left commodity symbol, with space
================================================================================
2026-01-24
    Assets  $ 1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Quoted commodity
================================================================================
2026-01-24
    Assets  3 "green apples"
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)
        (commodity)))
    (posting
      (account))))

================================================================================
Minus sign before left commodity
================================================================================
2026-01-24
    Assets  -$1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Minus sign after left commodity
================================================================================
2026-01-24
    Assets  $-1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account))))

================================================================================
Plus sign before bare quantity
================================================================================
2026-01-24
    Assets  +1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (sign)
        (quantity)))
    (posting
      (account))))

================================================================================
Plus sign before left commodity
================================================================================
2026-01-24
    Assets  +$1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Plus sign before left commodity with space
================================================================================
2026-01-24
    Assets  + $1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Plus sign after left commodity
================================================================================
2026-01-24
    Assets  $+1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account))))

================================================================================
Sign and spaces between commodity and number
================================================================================
2026-01-24
    Assets  $-      1
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account))))

================================================================================
Scientific notation
================================================================================
2026-01-24
    Assets  1E-6
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Scientific notation with left commodity
================================================================================
2026-01-24
    Assets  EUR 1E3
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Decimal mark as period
================================================================================
2026-01-24
    Assets  1.23
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Decimal mark as comma
================================================================================
2026-01-24
    Assets  1,23
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Trailing decimal mark
================================================================================
2026-01-24
    Assets  10.
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))

================================================================================
Digit group marks with comma
================================================================================
2026-01-24
    Assets  $1,000,000.00
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Digit group marks with period
================================================================================
2026-01-24
    Assets  EUR 2.000.000,00
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Digit group marks Indian style
================================================================================
2026-01-24
    Assets  INR 9,99,99,999.00
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))))

================================================================================
Digit group marks with space
================================================================================
2026-01-24
    Assets  1 000 000.00
    Expenses

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (posting
      (account)
      (amount
        (quantity)))
    (posting
      (account))))
