test/corpus/code.txt
================================================================================
A code
================================================================================
2026-01-24 (1234) Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (description)))

================================================================================
A code with spaces
================================================================================
2026-01-24 (code my code) Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (code)
    (description)))

================================================================================
A code after status
================================================================================
2026-01-24 ! (code my code) Transaction

2026-01-24 * (code my code) Transaction

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (status)
    (code)
    (description))
  (transaction
    (date)
    (status)
    (code)
    (description)))
