test/corpus/comment.txt
================================================================================
Line comment starting with #
================================================================================
# a comment line

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Line comment starting with ;
================================================================================
; another commentline

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Mixed comments on multiple lines
================================================================================
; another commentline

# another commentline
; another commentline

# another commentline

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (comment))

================================================================================
Multi-line comment block
================================================================================
comment
A multi-line comment block,
continuing until "end comment" directive
or the end of the current file.
end comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment in transaction header
================================================================================
2026-01-24 Barbershop ; comment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)))

================================================================================
Comment in transaction body
================================================================================
2026-01-24 Barbershop
    ; another comment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)))

================================================================================
Comment in transaction body, not parsed as tag
================================================================================
2026-01-24 Groceries
;Assets:Test  $1

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (comment)))
